<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timer_title"
        android:id="@+id/timerTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timer"
        android:id="@+id/timerText"
        android:layout_below="@+id/timerTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_timer_button"
        android:id="@+id/cancelButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/timerTitle"
        android:layout_alignRight="@+id/timerTitle"
        android:layout_below="@+id/timerText"
        android:layout_marginTop="20dp"/>
</RelativeLayout>